--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ html {
     margin: 0;
     background-color: #FFFFFF;
    }
-   h1 {
+   h2 {
     font-family: Arial;
     color: red;
-    text-align: center;
+    text-align: left;
    }
    .wrapper {
     display: grid;
@@ -31,7 +31,7 @@ html {
     margin: 0 40px;
     transform: scale(1.2);
    }
-   .wrapper section a {
+   .wrapper section a.arrow__btn {
     position: absolute;
     color: #fff;
     text-decoration: none;
@@ -42,13 +42,13 @@ html {
     text-align: center;
     z-index: 1;
    }
-   .wrapper section a:nth-of-type(1) {
+   .wrapper section a.arrow__btn:nth-of-type(1) {
     top: 0;
     bottom: 0;
     left: 0;
     background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, black 100%);
    }
-   .wrapper section a:nth-of-type(2) {
+   .wrapper section a.arrow__btn:nth-of-type(2) {
     top: 0;
     bottom: 0;
     right: 0;
