--- a/style.css
+++ b/style.css
@@ -3,12 +3,22 @@ html {
    }
    body {
     margin: 0;
-    background-color: #FFFFFF;
+    background-color: black;
+   }
+   h1 {
+    font-family: Arial;
+    color: red;
+    text-align: center;
    }
    h2 {
     font-family: Arial;
     color: red;
     text-align: left;
+   }
+   #bestMovie img{
+
+     width: 364px;
+     height: 536px;    
    }
    .wrapper {
     display: grid;
@@ -24,11 +34,11 @@ html {
     margin: 20px 0;
    }
    .wrapper section .item {
-    padding: 0 2px;
+    padding: 0px 0px 0px 80px;
     transition: 250ms all;
    }
    .wrapper section .item:hover {
-    margin: 0 40px;
+    margin: 20 50px;
     transform: scale(1.2);
    }
    .wrapper section a.arrow__btn {
@@ -38,7 +48,7 @@ html {
     font-size: 6em;
     background: black;
     width: 80px;
-    padding: 20px;
+    padding: 60px 20px 20px 20px;
     text-align: center;
     z-index: 1;
    }
@@ -56,6 +66,8 @@ html {
    }
    .modal {
     visibility: hidden;
+    width: 100%;
+    height: 100%;
     opacity: 0;
     position: absolute;
     top: 0; right: 0;
@@ -63,7 +75,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(77, 77, 77, .7);
+    border: 2px solide white;
     transition: all .4s;
   }
   .modal:target {
@@ -75,8 +87,12 @@ html {
     position: relative;
     width: 500px;
     max-width: 90%;
-    background: white;
+    background: black;
+    color: white;
     padding: 1.5em 2em;
+    border: 2px solid white;
+    display: flex;
+    flex-wrap: wrap;
   }
   
   .modal_close {
