--- a/style.css
+++ b/style.css
@@ -15,10 +15,47 @@ html {
     color: red;
     text-align: left;
    }
+   .play{
+    color: white; 
+    font-size: 18px;
+    width: 150px;
+    height: 30px;
+    border: 2px solid white;
+    text-align: center;
+    padding-top: 10px;
+   }
+   .play:hover{
+     color: black;
+     background-color: white;
+   }
+   #bestMovie{
+     display: flex;
+     align-content: center;
+     justify-content: center;
+     flex-direction: column;
+     flex-flow: column wrap; 
+     height: 420px;
+     width: 1000px;
+     border: 2px solid white;
+     margin: 0 auto;
+   }
+   #bestMovie .poster{
+    margin-right: 150px;
+  }
+   #bestMovie .info em{
+    font-weight: bold;
+    font-style: normal;
+  }
+   #bestMovie .info{
+    width: 500px;
+  }
    #bestMovie img{
-
-     width: 364px;
-     height: 536px;    
+     width: 273px;
+     height: 402px;    
+   }
+   .info{
+     color: white;
+     font-size: 1.2em;
    }
    .wrapper {
     display: grid;
@@ -34,7 +71,7 @@ html {
     margin: 20px 0;
    }
    .wrapper section .item {
-    padding: 0px 0px 0px 80px;
+    padding: 0px 30%;
     transition: 250ms all;
    }
    .wrapper section .item:hover {
@@ -85,7 +122,7 @@ html {
   .modal_content {
     border-radius: 4px;
     position: relative;
-    width: 500px;
+    width: 700px;
     max-width: 90%;
     background: black;
     color: white;
@@ -93,6 +130,18 @@ html {
     border: 2px solid white;
     display: flex;
     flex-wrap: wrap;
+    font-size: 1.2em;
+  }
+  .modal_content h1{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .modal_content img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
   
   .modal_close {
